--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 
 <body>
-	<div class="block">
+	<div class="block block--big">
+		<a href="#" class="link">Google</a>
 		<div class="block__text">
 			Lorem ipsum dolor <span>sit amet</span>.
 		</div>
 	</div>
+	<a href="#" class="link-2">Google</a>
 </body>
 
 </html>
